--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">選課小幫手</a>
+        <a class="navbar-brand" href="{{ url_for('index') }}">選課小幫手</a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 {#            <li class="nav-item">#}
