--- a/templates/base.html
+++ b/templates/base.html
@@ -12,26 +12,19 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <a class="navbar-brand" href="{{ url_for('index') }}">選課小幫手</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-{#            <li class="nav-item">#}
-{#              <a class="nav-link active" aria-current="page" href="#">選課小幫手</a>#}
-{#            </li>#}
-          </ul>
-        <div class="d-flex">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-                <a class="nav-link active" href="{{ url_for('account.login') }}">登入</a>
-            </li>
-            <li>
-                <a class="nav-link active" href="{{ url_for('account.register') }}">註冊</a>
-            </li>
-            </ul>
-        </div>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav ms-auto">
+                <a class="nav-link" href="{{ url_for('table.show') }}">排課</a>
+                <a class="nav-link" href="{{ url_for('account.login') }}">登入</a>
+                <a class="nav-link" href="{{ url_for('account.register') }}">註冊</a>
+            </div>
         </div>
       </div>
     </nav>
-    <div class="container-md mt-3">
+    <div class="container-md mt-3 mb-3">
         {% block content %}
         {% endblock content %}
     </div>
