--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh">
 <head>
     <meta charset="utf-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -18,8 +18,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 <a class="nav-link" href="{{ url_for('table.show') }}">排課</a>
-                <a class="nav-link" href="{{ url_for('account.login') }}">登入</a>
-                <a class="nav-link" href="{{ url_for('account.register') }}">註冊</a>
+                <a class="nav-link" href="{{ url_for('user.login') }}">登入</a>
+                <a class="nav-link" href="{{ url_for('user.register') }}">註冊</a>
             </div>
         </div>
       </div>
