--- a/templates/base.html
+++ b/templates/base.html
@@ -17,9 +17,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
-                <a class="nav-link" href="{{ url_for('table.show') }}">排課</a>
-                <a class="nav-link" href="{{ url_for('user.login') }}">登入</a>
-                <a class="nav-link" href="{{ url_for('user.register') }}">註冊</a>
+                <a class="nav-link" href="{{ url_for('table_bp.show') }}">排課</a>
+                <a class="nav-link" href="{{ url_for('user_bp.login') }}">登入</a>
+                <a class="nav-link" href="{{ url_for('user_bp.register') }}">註冊</a>
             </div>
         </div>
       </div>
