--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block title %}註冊{% endblock title%}
 {% block content %}
-<form action="{{ url_for('user.register') }}" method="post">
+<form action="{{ url_for('user_bp.register') }}" method="post">
     <div class="mb-3">
         <label for="username" class="form-label">使用者名稱</label>
         <input type="text" class="form-control" id="username" name="username">
