--- a/templates/register.html
+++ b/templates/register.html
@@ -4,21 +4,21 @@
 <form action="{{ url_for('user_bp.register') }}" method="post">
     <div class="mb-3">
         <label for="username" class="form-label">使用者名稱</label>
-        <input type="text" class="form-control" id="username" name="username">
+        <input type="text" class="form-control" id="username" name="username" required>
         <div id="emailHelp" class="form-text">使用者名稱會作為評價者的識別，並用於登入，長度必須小於 12 位的英數組合。</div>
     </div>
     <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email">
+        <input type="email" class="form-control" id="email" name="email" required>
         <div id="emailHelp" class="form-text">用於忘記密碼的認證信。</div>
     </div>
     <div class="mb-3">
         <label for="password" class="form-label">密碼</label>
-        <input type="password" class="form-control" id="password" name="password">
+        <input type="password" class="form-control" id="password" name="password" required>
     </div>
     <div class="mb-3">
         <label for="repeatPassword" class="form-label">重複密碼</label>
-        <input type="password" class="form-control" id="repeatPassword" name="repeatPassword">
+        <input type="password" class="form-control" id="repeatPassword" name="repeatPassword" required>
     </div>
     <div class="mb-3">
         <label for="dept" class="form-label">科系</label>
