register without email or username duplicate

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,30 @@
       </div>
     </nav>
     <div class="container-md mt-3 mb-3">
+        {% with errors = get_flashed_messages(category_filter=["error"]) %}
+            {% if errors %}
+            <div class="alert alert-danger" role="alert">
+                <ul>
+                    {% for error in errors %}
+                        <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        {% endwith %}
+
+        {% with successes = get_flashed_messages(category_filter=["success"]) %}
+            {% if successes %}
+            <div class="alert alert-success" role="alert">
+                <ul>
+                    {% for success in successes %}
+                        <li>{{ success }}</li>
+                    {% endfor %}
+                </ul>
+            </div>
+            {% endif %}
+        {% endwith %}
+
         {% block content %}
         {% endblock content %}
     </div>
