--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 {% block content %}
     <form action="{{ url_for('user_bp.login') }}" method="post">
       <div class="mb-3">
-        <label for="username" class="form-label">使用者名稱</label>
+        <label for="username" class="form-label">帳號</label>
         <input type="text" class="form-control" id="username" name="username">
       </div>
       <div class="mb-3">
