--- a/templates/register.html
+++ b/templates/register.html
@@ -15,6 +15,7 @@
     <div class="mb-3">
         <label for="password" class="form-label">密碼 *</label>
         <input type="password" class="form-control" id="password" name="password" required>
+        <div id="emailHelp" class="form-text">密碼為長度必須小於 30 位。</div>
     </div>
     <div class="mb-3">
         <label for="repeatPassword" class="form-label">重複密碼 *</label>
