dropdown no value

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ms-auto">
                 {# TODO navbar based on login status #}
-                <a class="nav-link" href="{{ url_for('table_bp.show') }}">排課</a>
+                <a class="nav-link" href="{{ url_for('table_bp.table') }}">排課</a>
                 <a class="nav-link" href="{{ url_for('user_bp.login') }}">登入</a>
                 <a class="nav-link" href="{{ url_for('user_bp.register') }}">註冊</a>
                 <a class="nav-link" href="{{ url_for('user_bp.logout') }}">登出</a>
