dropdown no value

--- a/templates/table.html
+++ b/templates/table.html
@@ -296,6 +296,7 @@
                         </div>
                     </div>
                     {# 課程類別drop down  #}
+                     {# 課程類別drop down  #}
                     <div class="dropdown">
                         <div class="col-md-12 btn-group">
                             <button class="btn btn-info dropdown-toggle" style="text-align: left" type="button" data-bs-toggle="dropdown" aria-expanded="false">
