--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
                         帳號管理
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">{{ session['username'] }}</a></li>
+                        <li><a class="dropdown-item" href="{{ url_for('user_bp.profile') }}">{{ session['username'] }}</a></li>
                         <li><a class="dropdown-item" href="{{ url_for('user_bp.logout') }}">登出</a></li>
                         </ul>
                     </li>
